src/objects/CXE_Service_Enrollment__c.object
<CustomObject>
    <description>Logs customer portal registrations</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>CXE_ServiceId__r.V10_Payor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Alias__c</fullName>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_CreatedforRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_Icon_Id__c</fullName>
        <description>Used for MoVE app - Service Icon Image ID</description>
        <label>Icon Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_SIN_Auto_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will determine if there are other SINS enrolled automatically related to the SIN that the User enrolled when he/she registered.</description>
        <label>SIN Auto Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_SIN__c</fullName>
        <formula>CXE_ServiceId__r.SIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CXE_SIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_ServiceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Service Enrollments</relationshipLabel>
        <relationshipName>Service_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CXE_ServiceTerminated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Service Terminated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CXE_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payor</fullName>
                </value>
                <value>
                    <fullName>Non-Payor</fullName>
                </value>
                <value>
                    <fullName>Tenant</fullName>
                    <isActive>false</isActive>
                    <label>Tenant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_Unenrollment_Date__c</fullName>
        <label>Unenrollment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CXE_UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CXE_isLastEnrolledService__c</fullName>
        <defaultValue>false</defaultValue>
        <description>will set to  true if this service  was the last unenrolled</description>
        <label>Is_LastEnrolledService</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CXE_UserId__c</columns>
        <columns>CXE_Alias__c</columns>
        <columns>CXE_IsActive__c</columns>
        <columns>CXE_ServiceId__c</columns>
        <columns>CXE_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CXE_New_record_should_be_active</fullName>
        <active>true</active>
        <description>All new service enrollment records should be ACTIVE</description>
        <errorConditionFormula>AND(ISNEW(),  NOT(CXE_IsActive__c ))</errorConditionFormula>
        <errorMessage>Please check the Is Active? checkbox when creating new records.</errorMessage>
    </validationRules>
</CustomObject>